# netflex

./: .gitignore  README.md  package-lock.json  package.json
API_server/: .gitignore  app.js  command.txt  dockerfile  package-lock.json  package.json
API_server/controllers/: category.js  movie.js  recommend.js  tokens.js  users.js
API_server/middleware/: authMiddleware.js
API_server/models/: category.js  counter.js  movie.js  tokens.js  users.js
API_server/recommend_server/src/: CMakeLists.txt  Commandable.cpp  Commandable.h  DataReadable.cpp  DataSource.h  Delete.cpp  Delete.h  File.cpp  File.h  Get.cpp  Get.h  Help.cpp  Help.h  Patch.cpp  Patch.h  Post.cpp  Post.h  Server.cpp  Server.h  ThreadPool.cpp  ThreadPool.h  data.txt  dockerfile  main.cpp
API_server/routes/: category.js  movie.js  tokens.js  users.js
API_server/services/: category.js  movie.js  recommend.js  tokens.js  users.js
android/: readme.md  settings.gradle
android/app/: AndroidManifest.xml  build.gradle
public/: index.html
src/: App.css  App.js  index.css
src/components/: AdminCategoryManager.css  AdminCategoryManager.js  AdminMovieManager.css  AdminMovieManager.js  AdminPage.css  AdminPage.js  CategoryPage.css  CategoryPage.js  FeaturedMovie.css  FeaturedMovie.js  Home.css  Home.js  Login.css  Login.js  MainPage.css  MainPage.js  MovieCarousel.css  MovieCarousel.js  MovieForm.css  MovieForm.js  MovieModal.css  MovieModal.js  MoviePage.css  MoviePage.js  MovieSearch.css  MovieSearch.js  MyListPage.css  MyListPage.js  Navigation.css  Navigation.js  SearchResults.css  SearchResults.js  (+2 more)
(+98 files in other folders)
